# AED2324_PRJ1_G11

./: .gitignore  Aluno.cpp  Aluno.h  CMakeLists.txt  Turma.cpp  Turma.h  UC.h  main.cpp
code/: Aluno.cpp  Aluno.h  BSTree.cpp  BSTree.h  DataReader.cpp  DataReader.h  Log.cpp  Log.h  Operation.cpp  Operation.h  ScheduleManager.cpp  ScheduleManager.h  Turma.cpp  Turma.h  main.cpp
docs/: Doxyfile
docs/output/html/: index.html  menudata.js
docs/output/html/search/: searchdata.js
